updating swift package to work with C++

--- a/Sources/CAtomic/CMakeLists.txt
+++ b/Sources/CAtomic/CMakeLists.txt
@@ -8,7 +8,7 @@ See https://swift.org/LICENSE.txt for license information
 #]]
 
 add_library(CAtomic STATIC
-  CAtomic.c)
+  CAtomic.cpp)
 target_include_directories(CAtomic PUBLIC
   include)
 
